@@ -1,3 +1,7 @@
+2010-04-19 Sebastiaan de Jonge (SebastiaanDeJonge.com)  <szebi.eger@gmail.com>
+
+	* Fixed bug #7321: Do not truncate redirects table
+
 2010-04-16 Sebastiaan de Jonge (SebastiaanDeJonge.com)  <szebi.eger@gmail.com>
 
 	* Fixed bug #7295: Fatal error: Interface 'backend_cacheActionsHook' not found
